Fixed problem for offcancas cart where the body element shifts over the whole page and nothing can be seen or clicked anymore.

--- a/src/Smartstore.Web/Themes/Flex/wwwroot/_misc.scss
+++ b/src/Smartstore.Web/Themes/Flex/wwwroot/_misc.scss
@@ -181,6 +181,10 @@
     display: -webkit-box !important;
     display: -ms-flexbox !important;
 }
+
+.force-redraw:before {
+    content: ""
+}
 //
 // Vars
 // -------------------------------------------------
